add rotation not fix

--- a/Image_detection/Makefile
+++ b/Image_detection/Makefile
@@ -1,12 +1,15 @@
 CC = gcc
-CFLAGS = -Wall -Wextra -std=c11 -O2 `sdl2-config --cflags`
-LDFLAGS = `sdl2-config --libs` -lSDL2_image
-SRC = src/main.c src/image_utils.c
+CFLAGS = -Wall -Wextra -std=c99 `sdl2-config --cflags`
+LIBS = `sdl2-config --libs` -lSDL2_image -lm
+
+SRC = main.c image_processing.c image_utils.c contour_detection.c grid_detection.c
 OBJ = $(SRC:.c=.o)
-BIN = wordsearch
+BIN = ocr
+
+all: $(BIN)
 
 $(BIN): $(OBJ)
-	$(CC) $(OBJ) -o $(BIN) $(LDFLAGS)
+	$(CC) $(OBJ) -o $@ $(LIBS)
 
 clean:
 	rm -f $(OBJ) $(BIN)
