compiled program, false interpretation of image

--- a/Image_detection/Makefile
+++ b/Image_detection/Makefile
@@ -1,16 +1,23 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -std=c99 `sdl2-config --cflags`
-LIBS = `sdl2-config --libs` -lSDL2_image -lm
-
-SRC = main.c image_processing.c image_utils.c contour_detection.c grid_detection.c
-OBJ = $(SRC:.c=.o)
-BIN = ocr
+LDFLAGS = `sdl2-config --libs` -lSDL2_image
+OBJ = main.o image_processing.o image_utils.o
+BIN = ocr_detect
 
 all: $(BIN)
 
 $(BIN): $(OBJ)
-	$(CC) $(OBJ) -o $@ $(LIBS)
+	@echo "🧩 Édition des liens..."
+	$(CC) $(OBJ) -o $(BIN) $(LDFLAGS)
+	@echo "✅ Compilation terminée : $(BIN)"
+
+%.o: %.c
+	@echo "🧩 Compilation de $<..."
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 	rm -f $(OBJ) $(BIN)
+
+run: $(BIN)
+	./$(BIN) input.png output.bmp
 
