fix rotation (manual) restore out/ horizontal delimitation

--- a/Image_detection/Makefile
+++ b/Image_detection/Makefile
@@ -2,19 +2,27 @@ CC = gcc
 CFLAGS = -Wall -Wextra -std=c99 `sdl2-config --cflags`
 LDFLAGS = `sdl2-config --libs` -lSDL2_image -lm
 
-OBJS = main.o image_processing.o image_utils.o contour_detection.o grid_detection.o
-BIN = ocr_detect
+SRC = main.c image_processing.c image_utils.c contour_detection.c grid_detection.c
+OBJ = $(SRC:.c=.o)
+EXEC = ocr_detect
 
-all: $(BIN)
+all: $(EXEC)
 
-$(BIN): $(OBJS)
-	$(CC) $(OBJS) -o $(BIN) $(LDFLAGS) -lm
+$(EXEC): $(OBJ)
+	$(CC) $(OBJ) -o $(EXEC) $(LDFLAGS)
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJS) $(BIN)
-run: $(BIN)
-	./$(BIN) input.png output
+	@rm -f *.o
+	@rm -f $(EXEC)
+	@rm -f $(EXEC).exe
+	@rm -f *.bmp
+	@rm -rf out/
+
+run: $(EXEC)
+	./$(EXEC) input.png output
+
+re: clean all
 
